--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "latest",
     "lucide-react": "^0.475.0",
     "next": "15.1.0",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
