--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # dependencies
 /node_modules
 /.pnp
-.pnp.*
+.pnp.js
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -12,26 +12,43 @@
 
 # testing
 /coverage
+/.nyc_output
+/playwright-report/
+/test-results/
 
 # next.js
 /.next/
 /out/
+.swc/
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+Thumbs.db
+.project
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
+.history/
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
 
-# env files (can opt-in for committing if needed)
-.env*
+# local env files
+.env
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -39,3 +56,62 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Supabase
+.supabase/
+
+# Turborepo
+.turbo
+
+# Cache
+.cache/
+tsconfig.tsbuildinfo
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
+
+# Sitemap
+**/public/sitemap*.xml
+**/public/robots.txt
+
+# Local backup files
+*.bak
+*.backup
+*.swp
+*~
+
+# Build artifacts
+.eslintcache
+.stylelintcache
+.rollup.cache/
+
+# Database dumps (often used in development)
+*.sql
+*.dump
+
+# Exceptions
+!seed.sql
+# !schema.sql
+
+# Generated content
+/generated
+
+# Temporary files
+.tmp
+.temp
+
+# Logs
+logs/
+
+# Project specific
+# Uncomment if you need to ignore one of the configuration files
+# /next.config.cjs
+# /tailwind.config.js
+# /tailwind.config.ts
+# /postcss.config.mjs
+# /eslint.config.mjs
